Added a red ribbon and styled it

--- a/template.html
+++ b/template.html
@@ -10,6 +10,6 @@
 	</head>
 	
 	<body>
-		
+		<a href='https://github.com' class='github-ribbon'><img src='assets/images/github-ribbons/red.png' /></a>
 	</body>
 </html>
