--- a/template.html
+++ b/template.html
@@ -10,6 +10,18 @@
 	</head>
 	
 	<body>
+		<header>
+			
+		</header>
+		
+		<nav>
+			
+		</nav>
+		
+		<footer>
+			
+		</footer>
+		
 		<a href='https://github.com' class='github-ribbon'><img src='assets/images/github-ribbons/red.png' /></a>
 	</body>
 </html>
