Added the container and title

--- a/template.html
+++ b/template.html
@@ -10,17 +10,19 @@
 	</head>
 	
 	<body>
-		<header>
+		<div class='container'> 
+			<header>
+				<h1>My GitHub project</h1>
+			</header>
 			
-		</header>
-		
-		<nav>
+			<nav>
+				
+			</nav>
 			
-		</nav>
-		
-		<footer>
-			
-		</footer>
+			<footer>
+				
+			</footer>
+		</div>
 		
 		<a href='https://github.com' class='github-ribbon'><img src='assets/images/github-ribbons/red.png' /></a>
 	</body>
