dded the download button to the top right

--- a/template.html
+++ b/template.html
@@ -20,7 +20,10 @@
 				</div>
 				
 				<div class='six columns offset-by-one'>
-					
+					<a href='https://github.com/USER/REPOSITORY/archives/master' class='download-button'>
+						Download
+						<span>Latest version from GitHub</span>
+					</a>
 				</div>
 			</header>
 			
@@ -33,6 +36,6 @@
 			</footer>
 		</div>
 		
-		<a href='https://github.com' class='github-ribbon'><img src='assets/images/github-ribbons/red.png' /></a>
+		<a href='https://github.com/USER/REPOSITORY' class='github-ribbon'><img src='assets/images/github-ribbons/red.png' /></a>
 	</body>
 </html>
