Added the underline under the header

--- a/template.html
+++ b/template.html
@@ -11,15 +11,15 @@
 	
 	<body>
 		<div class='container'> 
-			<header>
-				<div class='nine columns'>
+			<header class='sixteen columns'>
+				<div class='nine columns alpha'>
 					<h1>My GitHub project</h1>
 					<h2>My projects description</h2>
 					
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer convallis erat sit amet leo hendrerit in laoreet diam tempus. Morbi luctus congue purus id ultrices. Aliquam erat volutpat. Sed facilisis lacus nec sapien venenatis ultrices. In vel erat nisi, vel posuere tortor. Phasellus pharetra nunc at odio euismod rutrum.</p>
 				</div>
 				
-				<div class='six columns offset-by-one'>
+				<div class='six columns offset-by-one omega'>
 					<a href='https://github.com/USER/REPOSITORY/archives/master' class='download-button'>
 						Download
 						<span>Latest version from GitHub</span>
