--- a/template.html
+++ b/template.html
@@ -27,6 +27,10 @@
 				</div>
 			</header>
 			
+			<div class='sixteen columns'>
+				<h3>Usage and examples</h3>
+			</div>
+			
 			<footer>
 				
 			</footer>
