Added the credits div to the footer

--- a/template.html
+++ b/template.html
@@ -70,7 +70,9 @@ function codeExample() {
 		
 		<footer>
 			<div class='container'>
-				
+				<div class='sixteen columns credits'>
+					<p>GitHub release template built with HTML5, CSS3 and JS by <a href='http://fublo.net'>Fublo</a></p>
+				</div>
 			</div>
 		</footer>
 		
