--- a/template.html
+++ b/template.html
@@ -70,6 +70,13 @@ function codeExample() {
 		
 		<footer>
 			<div class='container'>
+				<div class='ten columns offset-by-three'>
+					<p>
+						<a href='http://fublo.net'>Fublo Ltd</a> is a goal-driven development company.<br />
+						We design, develop and manage engaging websites and apps built on <a href='http://fublo.net/wordpress-design-development'>WordPress</a>.
+					</p>
+				</div>
+				
 				<div class='sixteen columns credits'>
 					<p>GitHub release template built with HTML5, CSS3 and JS by <a href='http://fublo.net'>Fublo</a></p>
 				</div>
