--- a/template.html
+++ b/template.html
@@ -70,7 +70,7 @@ function codeExample() {
 		
 		<footer>
 			<div class='container'>
-				<div class='ten columns offset-by-three'>
+				<div class='ten columns offset-by-three repo-author'>
 					<p>
 						<a href='http://fublo.net'>Fublo Ltd</a> is a goal-driven development company.<br />
 						We design, develop and manage engaging websites and apps built on <a href='http://fublo.net/wordpress-design-development'>WordPress</a>.
