Unstickied the footer, so now it does not stick to the bottom but works a lot better

--- a/template.html
+++ b/template.html
@@ -20,7 +20,7 @@
 	</head>
 	
 	<body onload='prettyPrint()'>
-		<div class='container wrapper'>
+		<div class='container'>
 			<header class='sixteen columns'>
 				<div class='nine columns alpha'>
 					<h1>My GitHub project</h1>
@@ -37,7 +37,7 @@
 				</div>
 			</header>
 			
-			<div class='sixteen columns main'>
+			<div class='sixteen columns'>
 				<h3>Usage and examples</h3>
 				
 				<div class='eight columns alpha'>
