Added the author logo

--- a/template.html
+++ b/template.html
@@ -71,6 +71,8 @@ function codeExample() {
 		<footer>
 			<div class='container'>
 				<div class='ten columns offset-by-three repo-author'>
+					<img src='assets/images/fublo-logo.png' class='repo-author-logo' />
+					
 					<p>
 						<a href='http://fublo.net'>Fublo Ltd</a> is a goal-driven development company.<br />
 						We design, develop and manage engaging websites and apps built on <a href='http://fublo.net/wordpress-design-development'>WordPress</a>.
