--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='en'>
 	<head>
-		<title>My GitHub project</title>
+		<title>GitHub pages theme</title>
 		<meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
 		<!--[if lt IE 9]><script type='text/javascript' src='assets/javascript/html5.js'></script><![endif]-->
 		<script type='text/javascript' src='assets/javascript/prettify.js'></script>
@@ -15,14 +15,14 @@
 		<div class='container'>
 			<header class='sixteen columns'>
 				<div class='nine columns alpha'>
-					<h1>My GitHub project</h1>
-					<h2>My projects description</h2>
-					
-					<p>Longer description of your project here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer convallis erat sit amet leo hendrerit in laoreet diam tempus. Morbi luctus congue purus id ultrices. Aliquam erat volutpat. Sed facilisis lacus nec sapien venenatis ultrices. In vel erat nisi, vel posuere tortor. Phasellus pharetra nunc at odio euismod rutrum.</p>
+					<h1>GitHub pages theme</h1>
+					<h2>A clean concise theme for your GitHub projects</h2>
+					<p>The theme uses skeleton to provide an adaptive layout so even looks great on mobile devices!</p>
+					<p>It comes with a download button, syntax highlighting and a section at the bottom to credit your self with.</p>
 				</div>
 				
 				<div class='six columns offset-by-one omega'>
-					<a href='https://github.com/USER/REPOSITORY/archives/master' class='download-button'>
+					<a href='https://github.com/fublo/gh-pages-theme/archives/master' class='download-button'>
 						Download
 						<span>Latest version from GitHub</span>
 					</a>
