Added the line about seeing what it does

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ git remote add gh-pages-theme git@github.com:fublo/gh-pages-theme.git; git fetch
 				
 				<h3>See it in action</h3>
 				
-				<p>Here you could put a live example if your project happens to be something to do with web development, or maybe you could insert some images.</p>
+				<p>To see the grid system do its thing just resize this window.</p>
 			</div>
 		</div>
 		
