Linked the ribbon to the repository page

--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@ git remote add gh-pages-theme git@github.com:fublo/gh-pages-theme.git; git fetch
 			</div>
 		</footer>
 		
-		<a href='https://github.com/USER/REPOSITORY' class='github-ribbon'><img src='assets/images/github-ribbons/red.png' /></a>
+		<a href='https://github.com/fublo/gh-pages-theme' class='github-ribbon'><img src='assets/images/github-ribbons/red.png' /></a>
 	</body>
 </html>
