Wrapped the section under the code in a sixteen column. Better than using a clearfix br

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@ function codeExample() {
 					<h4>Example number 2</h4>
 					<p>Some example code here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lacinia, enim quis interdum accumsan, odio velit ultricies lectus, sit amet pellentesque eros velit venenatis leo. Morbi lacinia tempor metus in viverra.</p>
 				</div>
-				
+			</div>
+			
+			<div class='sixteen columns'>
 				<h3>See it in action</h3>
 				
 				<p>Here you could put a live example if your project happens to be something to do with web development, or maybe you could insert some images.</p>
