Wrapped the section under the code in a sixteen column. Better than using a clearfix br

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@ git remote add gh-pages-theme git@github.com:fublo/gh-pages-theme.git; git fetch
 					<h4>Using the grid</h4>
 					<p>Above is an example of using skeleton, using those classes will allow you to build a responsive site. I recommend reading <a href='http://www.getskeleton.com/'>skeletons page</a> to learn more about the grid.</p>
 				</div>
-				
+			</div>
+			
+			<div class='sixteen columns'>
 				<h3>See it in action</h3>
 				
 				<p>To see the grid system do its thing just resize this window.</p>
