Made the footer more abstract

--- a/index.html
+++ b/index.html
@@ -69,11 +69,10 @@ function codeExample() {
 		<footer>
 			<div class='container'>
 				<div class='ten columns offset-by-three repo-author'>
-					<img src='assets/images/fublo-logo.png' class='repo-author-logo' />
+					<img src='http://placehold.it/100x105' class='repo-author-logo' />
 					
 					<p>
-						<a href='http://fublo.net'>Fublo Ltd</a> is a goal-driven development company.<br />
-						We design, develop and manage engaging websites and apps built on <a href='http://fublo.net/wordpress-design-development'>WordPress</a>.
+						Here you can put a bit of information about the author. Maybe a link to your twitter account or website. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lacinia, enim quis interdum accumsan, odio velit ultricies lectus, sit amet pellentesque eros velit venenatis leo.
 					</p>
 				</div>
 				
