Replaced adaptive with responsive

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<div class='nine columns alpha'>
 					<h1>GitHub pages theme</h1>
 					<h2>A clean concise theme for your GitHub projects</h2>
-					<p>The theme uses skeleton to provide an adaptive layout so even looks great on mobile devices!</p>
+					<p>The theme uses skeleton to provide an responsive layout so even looks great on mobile devices!</p>
 					<p>It comes with a download button, syntax highlighting and a section at the bottom to credit your self with.</p>
 				</div>
 				
