more grammar tweaks

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 				<div class='nine columns alpha'>
 					<h1>GitHub pages theme</h1>
 					<h2>A clean concise theme for your GitHub projects</h2>
-					<p>The theme uses skeleton to provide a responsive layout so even looks great on mobile devices!</p>
-					<p>It comes with a download button, syntax highlighting and a section at the bottom to credit yourself with.</p>
+					<p>The theme uses Skeleton to provide a responsive layout, so your GitHub page looks great on mobile devices!</p>
+					<p>It comes with a download button, syntax highlighting and a section at the bottom to credit yourself.</p>
 				</div>
 				
 				<div class='six columns offset-by-one omega'>
@@ -53,7 +53,7 @@ git remote add gh-pages-theme git@github.com:fublo/gh-pages-theme.git; git fetch
 					</code>
 					
 					<h4>Using the grid</h4>
-					<p>Above is an example of using skeleton, using those classes will allow you to build a responsive site. I recommend reading <a href='http://www.getskeleton.com/'>skeletons page</a> to learn more about the grid.</p>
+					<p>Above is an example of using Skeleton, using those classes will allow you to build a responsive site. I recommend reading <a href='http://www.getskeleton.com/'>Skeleton's page</a> to learn more about the grid.</p>
 				</div>
 			</div>
 			
