Fixed some more grammar. I also spelt grammar right that time!

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ git remote add gh-pages-theme git@github.com:fublo/gh-pages-theme.git; git fetch
 					</code>
 					
 					<h4>Installation</h4>
-					<p>Running this line will install the theme into your repository. It does this by downloading the repository into the gh-pages branch of your repository. Please only do this is you currently do not have a gh-pages branch, because it will try to replace it.</p>
+					<p>Running this line will install the theme into your repository. It does this by downloading the repository into the gh-pages branch of your repository. Please only do this if you currently do not have a gh-pages branch, because it will try to replace it.</p>
 				</div>
 				
 				<div class='eight columns omega'>
